--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -2,7 +2,7 @@
         <div class="col-md-6" >
         <a href="/users/view-results">
 
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9pXf3XJcjOr23rpmE1guhcS8XU05WPE0UN2MCLzAXQ6dQiS96" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
+        <img src="https://d3ui957tjb5bqd.cloudfront.net/images/screenshots/products/12/121/121104/flaticons15-pr-f.jpg?1401654621" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
         <h3><span>YOUR RESULTS</span></h3>
         </a>
         </div>
@@ -11,13 +11,13 @@
                 <h2 id="h1-images">What you can do</h2>
             </div>
             <a href="/tools/start-health-assessment">
-            <img src="/assets/images/stemcells-purple.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
+            <img src="http://feelgrafix.com/data_images/out/20/930465-dna.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
             <h3><span>Take The Clinical Trial <br>Assessment</span></h3>
             </a>
 
             <a href="/tools/genetic">
-            <img src="http://www.stemcellactionnetwork.org/stemcellaction.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
-            <h3 id="top-right-h3"><spanid="top-right-span">Import Your Genetic Data</span></h3>
+            <img src="http://p6.zdassets.com/hc/settings_assets/110137/200071170/BRAvBoNT6M0Je9RDM5XioQ-B8RxjraWdnSXCzvGLrn68Q-icn_logo_retina.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
+            <h3 id="top-right-h3"><spanid="top-right-span">Import Your 23andme Genetic Data</span></h3>
             </a>
         </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="col-md-6" id="col-two-dash-images"> 
             <a href="/tools/amsler-test">
 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9pXf3XJcjOr23rpmE1guhcS8XU05WPE0UN2MCLzAXQ6dQiS96" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
+            <img src="http://www.snowmyna.com/wp-content/uploads/2014/08/AMD-Amsler-Grid-288x300.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
             <h3><span>Take the Amsler Test</span></h3>
             </a>
 
