--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
 <div class="jumbotron-main">
     <span>
     
-        <h1 class="main-h1"> CESARCELLS 
-        <p class="what-is-sci"><strong>YOUR AGE RELATED MACULAR DEGENERATION RESOURCE!</strong></p>
+        <h1 class="main-h1"> CESARCELLS, FIND A TRIAL. 
+        <p class="what-is-sci"><strong>AGE RELATED MACULAR DEGENERATION RESOURCE!</strong></p>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a>
         </h1> 
         
@@ -36,7 +36,7 @@
         </span> --}}
     <div>
 <div>
-    <div class="container">
+    {{!-- <div class="container"> --}}
         <div class="row">
             <div class="col-lg-12">
                 <section id="intro" class="intro-section">
@@ -59,7 +59,7 @@
                 </section>
             </div>
         </div>
-    </div>
+    {{!-- </div> --}}
 
 <!-- How it works Section -->
 <A name="how-it-work-main"></A>
