--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -18,7 +18,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">            
-            
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
+        My Health <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="dLabel">
+                <li><a href="/users/stargardt-disease-registry">Stargardt Disease Registry</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/users/my-appointments">Appointments</a></li>
+             
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
@@ -43,13 +52,13 @@ My Account </a>
               <ul class="dropdown-menu">
                 <li><a href="/users/dashboard">Dashboard</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">My Profile</a></li>
+                <li><a href="/accounts/updateinfo">My Profile</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Documents</a></li>
+                <li><a href="/accounts/password">Reset Password</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="/accounts/privacy">Terms and Conditions</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Contact Support</a></li>
+                <li><a href="/accounts/support">Contact Support</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/">Sign Out</a></li>
               </ul>
