password change works

--- a/views/account/updateinfo.handlebars
+++ b/views/account/updateinfo.handlebars
@@ -39,7 +39,7 @@
 
 
   <label for="statedetails">State</label><br>
-  <select>
+  <select class="form-control" name="stateselectpicker">
       <option value="AL">Alabama</option>
       <option value="AK">Alaska</option>
       <option value="AZ">Arizona</option>
@@ -92,6 +92,7 @@
       <option value="WI">Wisconsin</option>
       <option value="WY">Wyoming</option>
   </select> <br>
+  
   <div class="form-group">
     <label for="zip">Zip: </label>
     <input type="number" id="zip" name="zipcode" class="form-control" placeholder="Enter Age" autofocus>
