--- a/views/account/password.handlebars
+++ b/views/account/password.handlebars
@@ -1,5 +1,11 @@
 <div class="row">
   <div class="col-md-6">
+  {{#if error}}
+  <div class="alert alert-danger" style="margin-top: 100px">{{error}}</div>
+  {{/if}}
+  {{#if success}}
+  <div class="alert alert-success" style="margin-top: 100px">{{success}}</div>
+  {{/if}}
   <form id="sign-in-form" class="form-horizontal" action="/accounts/password-update" method="POST">
   
     <div class="form-group">
@@ -20,6 +26,8 @@
         <input type="password" class="form-control" id="inputPass" name="newpassword" placeholder="Password">
       </div>
     </div>
+    <button type="submit" class="btn btn-default">Submit!</button> 
+
   </form>
 
   </div>
