--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -3,9 +3,8 @@
     {{#if user}}
     {{user.local.email}} !</strong>
     {{/if}}
-    {{!-- <div class="alert alert-warning alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <strong></strong>  --}}
+    <div class="alert alert-success" role="alert"></div>
+   
     {{#if messages}}
     {{messages}}
     {{/if}}
