--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -2,6 +2,9 @@
 {{#if success}}
 <div class="alert alert-success">{{success}}</div>
 {{/if}}
+{{#if info}}
+<div class="alert alert-info">{{info}}</div>
+{{/if}}
 <div class="col-lg-8">
 <h2>STARGARDT DISEASE REGISTRY</h2>
 
