--- a/views/resources/glossary.handlebars
+++ b/views/resources/glossary.handlebars
@@ -11,8 +11,37 @@
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
-  
+  <ul class="shortcuts">
+  <li>jump to:</li>
+  <li><a href="#A" title="Terms beginning with A">A</a></li>
+  <li><a href="#B" title="Terms beginning with B">B</a></li>
+  <li><a href="#C" title="Terms beginning with C">C</a></li>
+  <li><a href="#D" title="Terms beginning with D">D</a></li>
+  <li><a href="#E" title="Terms beginning with E">E</a></li>
+  <li><a href="#F" title="Terms beginning with F">F</a></li>
+  <li><a href="#G" title="Terms beginning with G">G</a></li>
+  <li><a href="#H" title="Terms beginning with H">H</a></li>
+  <li><a href="#I" title="Terms beginning with I">I</a></li>
+  <li><a href="#J" title="Terms beginning with J">J</a></li>
+  <li><a href="#K" title="Terms beginning with K">K</a></li>
+  <li><a href="#L" title="Terms beginning with L">L</a></li>
+  <li><a href="#M" title="Terms beginning with M">M</a></li>
+  <li><a href="#N" title="Terms beginning with N">N</a></li>
+  <li><a href="#O" title="Terms beginning with O">O</a></li>
+  <li><a href="#P" title="Terms beginning with P">P</a></li>
+  <li><a href="#Q" title="Terms beginning with Q">Q</a></li>
+  <li><a href="#R" title="Terms beginning with R">R</a></li>
+  <li><a href="#S" title="Terms beginning with S">S</a></li>
+  <li><a href="#T" title="Terms beginning with T">T</a></li>
+  <li><a href="#U" title="Terms beginning with U">U</a></li>
+  <li><a href="#V" title="Terms beginning with V">V</a></li>
+  <li><a href="#W" title="Terms beginning with W">W</a></li>
+  <li><a href="#X" title="Terms beginning with X">X</a></li>
+  <li><a href="#Y" title="Terms beginning with Y">Y</a></li>
+  <li><a href="#Z" title="Terms beginning with Z">Z</a></li>
+  </ul>
   <div class="col-md-12">
+  <a name="A"></a>
     <h2 class="glossary-h2"> Achromatopsia </h2>
 
     <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">Achromatopsia is a type of cone dystrophy where there are normally problems only with vision from cone photoreceptors, the ones responsible for color and day vision and visual acuity. </p>
@@ -131,6 +160,7 @@
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="B"></a>
   <div class="col-md-12">
     <h2 class="glossary-h2"> Bardet-Biedl Syndrome (BBS) </h2>
 
@@ -164,6 +194,8 @@
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="C"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2"> Carotenoids </h2>
 
@@ -310,6 +342,8 @@ There may also be moderate to high myopia (short sightedness). The disorder is u
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="D"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">DHA (docosahexaenoic acid) </h2>
 
@@ -345,6 +379,8 @@ There may also be moderate to high myopia (short sightedness). The disorder is u
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="E"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2"> Embryonic Stem Cell</h2>
 
@@ -354,6 +390,8 @@ There may also be moderate to high myopia (short sightedness). The disorder is u
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="F"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2"> FDA</h2>
 
@@ -380,6 +418,8 @@ There may also be moderate to high myopia (short sightedness). The disorder is u
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="G"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">GA</h2>
 
@@ -477,6 +517,10 @@ The symptoms are progressive "night blindness" and peripheral vision loss.
  
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="H"></a>
+<a name="I"></a>
+
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Inner Segment</h2>
 
@@ -499,6 +543,8 @@ An iris is the colored "ring" surrounding the pupil that regulates the amount of
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="J"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Juvenile Macular Degeneration
 </h2>
@@ -512,6 +558,10 @@ An iris is the colored "ring" surrounding the pupil that regulates the amount of
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="K"></a>
+<a name="L"></a>
+
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Lancelot
 </h2>
@@ -576,6 +626,8 @@ A locus is a location in one part of a chromosome where a particular gene(s) mig
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="M"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Macugen®</h2>
 
@@ -623,6 +675,8 @@ Messenger RNA (mRNA) is the gene messenger that results from the transfer of gen
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="N"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">NEI
 </h2>
@@ -671,6 +725,8 @@ The nucleus is the specialized compartment within a cell that houses the DNA, pa
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="O"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Omega-3 fatty acid</h2>
     <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">A type of fat that is important for cell function. Also, see DHA.
@@ -700,6 +756,8 @@ The optic nerve is the "cable" that receives the light detection signals from ot
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="P"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Peripheral Nervous System</h2>
     <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">Nerves that are not part of the brain, spinal cord or retina, normally found in the extremities (e.g., arms, legs).
@@ -749,6 +807,10 @@ A proof of principle is a scientific confirmation that a previously unproven ide
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="Q"></a>
+<a name="R"></a>
+
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Recessive
 </h2>
@@ -887,6 +949,8 @@ A rod cell is a rod-shaped photoreceptor cell that is located throughout the ret
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="S"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Sclera
 
@@ -951,6 +1015,8 @@ A misalignment of the eyes in which each eye, simultaneously can point in a diff
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="T"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Trans Fats
 
@@ -963,6 +1029,8 @@ A misalignment of the eyes in which each eye, simultaneously can point in a diff
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="U"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Ultraviolet (UV) light
 </h2>
@@ -992,6 +1060,8 @@ There are at least three different forms of Usher syndrome. People with Usher sy
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="V"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Vector
 
@@ -1096,6 +1166,8 @@ The vitreous is the clear, jelly-like substance found in the middle of the eye t
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="W"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Wavelength</h2>
     <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">A measure of the character of light, where certain wavelength ranges define and distinguish different "types" of light. The photoreceptor cell detects and chemically converts light of certain wavelengths within the visible range (between 400-700 nanometers or nm) into electrical signals that travel, via the optic nerve, to the visual cortex in the brain.
@@ -1105,6 +1177,8 @@ The vitreous is the clear, jelly-like substance found in the middle of the eye t
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="X"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">X Chromosome</h2>
     <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">The inherited package (or chromosome) of DNA that contains genes that help to determine the sex of an individual. Two X chromosomes are inherited by females and one X chromosome and one Y chromosome are inherited by males. Mutation of a gene found on the X chromosome can cause X-linked diseases.
@@ -1122,6 +1196,8 @@ The vitreous is the clear, jelly-like substance found in the middle of the eye t
 
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="Y"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Y Chromosome
 
@@ -1133,6 +1209,8 @@ The Y chromosome is the sex chromosome passed-down from biological father to son
 </div>
 
 <div class="row" style="margin-top: 150px; margin-left: 150px">
+<a name="Z"></a>
+
   <div class="col-md-12">
     <h2 class="glossary-h2">Zinc
 
