--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -32,6 +32,12 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
+  
+<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
+{{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.12.3.js"></script> --}}
+
+
 </head>
 
 
