--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -39,6 +39,7 @@
    
       <button type="submit" class="btn btn-default">Sign Up!</button> 
       <br> 
+      <a href="/users/password_new">Forgot your password?</a><br>
       <p> By registering you are agreeing to our <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> </p>
     </form>
   </div>
